stop squashing top padding on reflow

--- a/app/assets/stylesheets/site/mixins.css.scss
+++ b/app/assets/stylesheets/site/mixins.css.scss
@@ -14,7 +14,8 @@
 @mixin full-width-after($maxWidth, $padding: 2%) {
   @media(max-width: $maxWidth) {
     width: 100% - 2 * $padding;
-    padding: 0 $padding;
+    padding-left: $padding;
+    padding-right: $padding;
   }
 }
 @mixin centered-to-full($width, $padding: 2%) {
